--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<style type="text/css">
+html,
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    background-image: linear-gradient(-11deg, #F5F61C 0%, #EEF0C8 100%);
+}
+
+div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+</style>
+
+<head>
+    <title></title>
+</head>
+
+<body>
+    <div style="">
+        <img style="" src="./jing.png">
+    </div>
+</body>
+
+</html>
