--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <style type="text/css">
 html,
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    background-image: linear-gradient(-11deg, #F5F61C 0%, #EEF0C8 100%);
+    font-family:"Microsoft Yahei", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    /*background-image: linear-gradient(-11deg, #F5F61C 0%, #EEF0C8 100%);*/
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
-div {
+
+.txt {
+    flex: 1;
+    font-size: 47px;
+    color: #F27407;
+    padding-bottom: 100px;
+    background-image: linear-gradient(-11deg, #C0D684 0%, #EEF0C8 100%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,6 +36,7 @@ img {
     <div style="">
         <img style="" src="./jing.png">
     </div>
+    <div class="txt">我的怀抱空着，心里已然开满了花</div>
 </body>
 
 </html>
